handling multi input forms

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 16px;
+  font-family: sans-serif;
+}
+
 .app {
   display: flex;
   align-items: center;
